--- a/Platformio/Vcam/platformio.ini
+++ b/Platformio/Vcam/platformio.ini
@@ -8,7 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:esp32cam]
 platform = espressif32
-board = esp32dev
+board = esp32cam
 framework = arduino
+lib_deps = 
+    https://github.com/me-no-dev/ESPAsyncWebServer.git
+    https://github.com/me-no-dev/AsyncTCP.git
+build_flags = 
+	-D CAMERA_MODEL_AI_THINKER
+upload_speed = 921600
+monitor_speed = 115200
